fix: dark mode colors

--- a/src/frontend/src/pages/css/ErrorPage.css
+++ b/src/frontend/src/pages/css/ErrorPage.css
@@ -21,7 +21,7 @@
 }
 
 .dark-mode .error-text {
-  color: rgb(255, 199, 230);
+  color: rgb(255, 122, 151);
 }
 
 .back-home {
